[package]
authors = ["Barugon <barugon@dungeonbox.net>", "Elias Kartashov <elias@lowenware.com>"]
description = "File dialog window for egui"
edition = "2021"
keywords = ["file-dialog", "file-picker"]
license = "MIT"
name = "egui_file"
repository = "https://github.com/Barugon/egui_file"
rust-version = "1.76.0"
version = "0.19.1"

[dependencies.egui]
version = "0.30"

[dependencies.dyn-clone]
version = "1.0.17"

[dev-dependencies.eframe]
version = "0.30"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = { version = "0.3.0", features = ["tokio"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
poll-promise = { version = "0.3.0", features = ["web"] }
